@@ -47,3 +47,5 @@
 # Avoid project specific files
 Bundle-JONASBN.kpf
 spikes
+^MYMETA.yml$
+\.kpf$
