@@ -1,0 +1,9 @@
+# $Id: pod.t 6919 2010-01-29 22:38:04Z jonasbn $ 
+
+use Test::More;
+
+eval "use Test::Pod 1.14";
+plan skip_all => 'Test::Pod 1.14 required' if $@;
+plan skip_all => 'set TEST_POD to enable this test' unless $ENV{TEST_POD};
+
+all_pod_files_ok();
